<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:id="@+id/ingredeint_layout">

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/ingredient_name_tv"
            android:text="@string/ingredient_name_hardcoded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/ingredient_amount_tv"
            android:text="@string/ingredient_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:textStyle="bold"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_1"
        android:background="@android:color/darker_gray"/>
</LinearLayout>